# gh-prs

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
gh_prs/: app.py  cli.py  gh.py  snooze.py
tests/: test_cli.py  test_gh.py  test_snooze.py
