[project]
name = "gh-prs"
version = "0.4.0"
description = "CLI for listing GitHub pull requests that need your attention, powered by gh CLI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=14.0.0",
]

[project.scripts]
gh-prs = "gh_prs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.8",
]
